# telegram-bot-bankning

./: Dockerfile  Makefile  docker-compose-dev.yaml  entrypoint.sh  main.py  pyproject.itomlljn  pyproject.toml  reload.py
app/: __init__.py
app/clover/: message.py  parsers.py  tools.py
app/common/: exception.py  logging.py  middleware.py
app/conversation/: models.py  service.py
app/database/: __init__.py  config.py  models.py
app/dva/: models.py
app/paystack/: client.py  error.py
app/rabbitmq/: client.py  publish.py  subscribe.py
app/settings/: config.py
app/user/: models.py  service.py  states.py
migrations/: env.py
migrations/versions/: 26f377c186b9_added_telegram_id_and_balance_to_user.py  3049092373df_updated_message_role_type_to_enum_on_.py  376b07ca1b61_updated_messaged_model.py  3db8b254d47c_modofied_telegram_id_on_user_model.py  5da234f75912_updated_messaged_model.py  5e5066ffc46f_add_email_to_user_model.py  6d684a3c1367_added_phonenumber_to_user_model.py  7ff75d275708_added_a_conversation_model_and_upated_.py  87f6c77450d3_updated_dva_model.py  9319ddbb562c_updated_message_role_type_to_text_on_.py  950c8684c854_add_dva_model_and_udpate_user_model.py  ba93077cd0f7_updated_dva_model.py  bd2e3cdf3424_add_dva_model_and_udpate_user_model.py  c63ccf22331e_added_first_and_last_name__to_user.py  ca077586c783_updated_conversation_model_removed_.py  d315e9bc2cd3_updated_messaged_model.py  edf2cc640657_removed_all_models_apart_from_users.py  ef4c96f895ea_initial_migrations.py  f09c585f7bdb_update_user_model_firstname_and_.py  (+2 more)
server/: main.py
(+11 files in other folders)
